<resources>
    <string name="app_name">Controls boiler grow temperature</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="clock_to_login">Clock to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout_text">logout</string>
    <string name="temperature_btn">Your temperature</string>
    <string name="send_temperature_btn">Send temperature</string>
    <string name="connecting_to_database_hint">Connecting to database..</string>
    <string name="adress_editText">Address</string>
    <string name="click_to_reset_password">Reset password</string>
    <string name="reset_btn">Reset</string>
    <string name="reset_password_text">Reset password</string>
    <string name="back_to_login_text">Back to login</string>
    <string name="hot_water">\Hot water temperature: \</string>
    <string name="cold_water">\Cold water temperature: \</string>
    <string name="air_temperature">\Air temperature in room: \</string>
    <string name="heater_power">\Power of heather: \</string>
    <string name="pomp_work">\Pomp is work: \</string>
    <string name="errors">\Errors: \</string>
    <string name="gas_consumption">\Gas consumption: \</string>
    <string name="air_consumption">\Air consumption: \</string>
    <string name="water_pressure">\Water pressure: \</string>
    <string name="gas_pressure">\Gas pressure: \</string>
    <string name="unavailable_user">Unavailable user</string>
    <string name="temperature_send">Temperature sent</string>
    <string name="write_number_only">Write only number in this line</string>
    <string name="login_enter_email">Enter email</string>
    <string name="login_enter_password">Entre password</string>
    <string name="successful_login">Login Successful</string>
    <string name="failed_login">Authentication failed</string>
    <string name="repeat_write_email_reset">Pleas, repeat write email</string>
    <string name="sent_email_reset">Email sent \n If you don\'t see email, please, check spam</string>
    <string name="unsuccessful_send_email_reset">Unavailable email</string>
    <string name="your_name_text">Your name</string>
    <string name="address_not_found">Address is not found</string>
    <string name="warning_temperature_text">Warning! Very high temperature! We used standard temperature - 24.
        You can use temperature: 10 - 40</string>
</resources>